size on smaller size fixed

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -85,4 +85,8 @@
   .exampleWrapper {
     padding-bottom: 1rem;
   }
+
+  .getStarted {
+    font-size: 14px;
+  }
 }
